Попытки заставить работать эту хрень на паре. А зачем оно нам?